# assistax-service-doc-processing-public

./: DOCUMENTACION_REPOSITORIO_ASSISTAX.md  Dockerfile  Prompt operativo para Cursor por fase.md  README.md  STACK_TECNOLOGICO.md  docker-compose.yml  logging_config.py  main.py  models.py  plan_api_pdf_processor_v2.md  plan_cursor_rewrite_doc_processing.md  pyproject.toml  requirements-layout-spike.txt  requirements.txt  settings.py
jobs/: __init__.py  cleanup.py
middleware/: __init__.py  auth.py
pipeline/: __init__.py  blob_download.py  block_classifier_llm_v2.py  block_classifier_v2.py  block_rules_v2.py  boxed_note_classifier.py  chunk_projector_v2.py  db_writer.py  decreto_heading.py  doc_type_classifier.py  embeddings.py  exceptions.py  generic_heading_classifier.py  heading_classifier.py  heading_refinement.py  layout_extractor_v2.py  layout_models.py  layout_normalizer_v2.py  legal_chunker.py  legal_ordinal_patterns.py  metadata_extractor.py  pdf_extractor.py  pdf_text_normalization.py  pymupdf_bbox.py  quality_validator_v2.py  runner.py  shadow_compare_v2.py  structure_builder_v2.py  toc_builder.py
scripts/: _v2_eval_helpers.py  backfill_generic_headings.py  backfill_layout_v2.py  backfill_legal_toc.py  diagnose_page.py  evaluate_layout_v2_corpus.py  export_layout_debug.py  pdf_corpus_table_audit.py  spike_pymupdf_layout.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  schema_test.sql  test_pipeline.py  test_pipeline_v2.py
tests/unit/: test_block_classifier_v2.py  test_boxed_note_classifier.py  (+17 more)
tmp/: deuda_tecnica.md
(+3 files in other folders)
